--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -62,7 +62,9 @@ body {
     color: var(--color-dark);
 }
 
-
+input[type="checkbox"] {
+    appearance: auto;
+}
 
 a {
     color: var(--color-dark);
@@ -441,6 +443,81 @@ span.title {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.student-profile-container {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.student-profile-container .right-student-info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: fit-content;
+}
+
+.student-name-container {
+    border-bottom: 1px solid var(--color-dark-variant);
+    padding-bottom: 5px;
+}
+
+.right-student-info-container .student-data-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    
+}
+
+.student-data-container .data {
+    display: flex;
+    flex-direction: column;
+}
+
+.student-data-container .data h5 {
+    color: var(--color-dark-variant);
+    font-size: 0.88rem;
+    font-weight: 600;
+}
+
+.right-student-info-container .student-buttons-container {
+    display: flex;
+    gap: 10px;
+}
+
+.right-student-info-container .student-buttons-container button:nth-child(1) {
+    background: var(--color-warning);
+    padding: 15px 0px;
+    font-weight: 600;
+    border-radius: 5px;
+    width: 150px;
+}
+
+.right-student-info-container .student-buttons-container button:nth-child(2) {
+    background: var(--color-success);
+    padding: 15px 0px;
+    font-weight: 600;
+    border-radius: 5px;
+    width: 150px;
+}
+
+.student-data-container .data h4 {
+    font-size: 1.1rem;
+}
+
+.left-photo-container {
+    width:fit-content;
+}
+
+.left-photo-container img {
+    max-width: 250px;
+    width: 100%;
+    aspect-ratio : 1 / 1;
+    border-radius: 5px;
+    object-fit: cover;
+    object-position: center;
+    border: 1px solid var(--color-dark-variant);
 }
 
 .office-main-container .first-div-container {
