--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -680,5 +680,43 @@ button {
     opacity: 0.03;
 }
 
+.clearance-section-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+}
 
+.clearance-section-container .clearance-header-bar-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--color-dark-variant);
+}
+
+
+
+.clearance-section-container 
+.clearance-header-bar-container .clearance-info-table-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.clearance-section-container .clearance-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    
+}
+
+.clearance-section-container .clearance-details-table-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+ 
 
