--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -738,8 +738,10 @@ button {
 .clearance-section-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    box-shadow: var(--box-shadow);
     gap: 20px;
+    background: var(--color-white);
+    border: 1px solid var(--color-light) ;
 }
 
 .clearance-section-container .clearance-header-bar-container {
@@ -748,9 +750,16 @@ button {
     align-items: center;
     gap: 10px;
     padding-bottom: 5px;
-    border-bottom: 1px solid var(--color-dark-variant);
+    
 }
 
+.clearance-header-bar-container > h3 {
+    
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 1.5rem;
+    background-color: var(--color-light);
+}
 
 
 .clearance-section-container 
@@ -758,6 +767,30 @@ button {
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 0px 10px;
+}
+
+.clearance-info-table-container table {
+    text-align: left;
+    border-collapse: collapse;
+}
+
+.clearance-info-table-container table tr th {
+    min-width: 200px;
+    padding: 15px 0px;
+    border-bottom: 1px solid var(--color-dark-variant) ;
+    color: var(--color-info-dark);
+}
+
+.clearance-info-table-container table tr td {
+    min-width: 200px;
+    padding: 15px 0px;
+    border-bottom: 1px solid var(--color-dark-variant);
+    font-weight: 600;
+}
+
+.clearance-info-table-container table tbody tr:last-child td {
+    border: none;
 }
 
 .clearance-section-container .clearance-details-container {
