--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -510,6 +510,98 @@ span.title {
     width:fit-content;
 }
 
+.form-and-table-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 20px;
+}
+
+.clearance-detail-container {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    background: var(--color-white);
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius-1);
+    padding: var(--card-padding);
+    transition: all 200ms ease;
+}
+
+.clearance-detail-container:hover {
+    box-shadow: none;
+}
+
+.clearance-detail-container .clearance-detail-left {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-right: 10px;
+    border-right: 1px solid var(--color-info-dark) ;
+}
+
+.clearance-detail-container 
+.clearance-detail-left 
+.detail-left-header-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 30px;
+    border-bottom: 1px solid var(--color-info-dark);
+    padding-bottom: 5px;
+}
+
+.clearance-detail-container .clearance-detail-left 
+.detail-left-header-title .status-title {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.clearance-detail-container .clearance-detail-left 
+.detail-left-main-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 0px 20px;
+}
+
+.clearance-detail-container .clearance-detail-left 
+.detail-left-main-content .clearance-info-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.clearance-detail-container .clearance-detail-left 
+.detail-left-main-content .clearance-info-container h3 {
+    color: var(--color-dark-variant);
+    font-size: 1rem;
+}
+
+.clearance-detail-container .clearance-detail-left 
+.detail-left-main-content .clearance-info-container h4 {
+    font-size: 1.1rem;
+    
+}
+
+
+.clearance-detail-container .clearance-detail-right {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.clearance-detail-container .clearance-detail-right .clearance-detail-right-title {
+    padding-bottom: 5px;
+}
+
+.clearance-detail-container .clearance-detail-right .clearance-detail-right-main-content {
+    padding-left: 10px;
+    width: 100%;
+}
+
+.clearance-detail-container .clearance-detail-right .clearance-detail-right-main-content table {
+    width: 100%;
+}
+
 .left-photo-container img {
     max-width: 250px;
     width: 100%;
