--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1184,15 +1184,15 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
 
 .right .top {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     gap: 2rem;
 }
 
-.right .top h1 {
+/* .right .top h1 {
     
     position: absolute;
     left: 15%;
-}
+} */
 
 .right .top button {
     display: none;
@@ -1977,8 +1977,15 @@ main table tbody tr td:last-child input, main table tbody tr td:last-child butto
 }
 
 .bulk-actions-container button {
-    background: var(--color-danger);
+    background: var(--color-primary-variant);
     padding: 10px 20px;
     width: 100%;
     border-radius: var(--border-radius-1);
+    cursor: pointer;
+    color: white;
+    transition: all 200ms ease;
+}
+
+.bulk-actions-container button:hover {
+    background: var(--color-primary);
 }
