--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -439,7 +439,7 @@ span.title {
 
 .office-main-container {
     width: 100%;
-    max-width: 900px;
+    max-width: 1200px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -449,6 +449,21 @@ span.title {
     display: flex;
     flex-direction: row;
     gap: 30px;
+    justify-content: center;
+    background: var(--color-white);
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius-1);
+    padding: var(--card-padding);
+    width: fit-content;
+    align-self: center;
+}
+
+.contain-check {
+    background: var(--color-white);
+    padding: 2px 12px 2px 10px;
+    position: absolute;
+    top: 50px;
+    z-index: 100;
 }
 
 .student-profile-container .right-student-info-container {
@@ -616,13 +631,17 @@ span.title {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     gap: 50px;
     padding: 10px;
     /* background: var(--color-white); */
     border-radius: var(--border-radius-1);
     
     /* box-shadow: var(--box-shadow); */
+}
+
+.office-main-container .first-div-container h2 {
+    font-size: 40px;
 }
 
 .first-div-container .top-left div {
@@ -670,8 +689,15 @@ button {
 .student-insight-container {
     background: var(--color-white);
     border-radius: var(--border-radius-1);
-    padding: var(--card-padding);
+    padding: 5px;
     box-shadow: var(--box-shadow);
+}
+
+.view-link {
+    background: rgb(17, 134, 17);
+    color: white !important;
+    padding: 3px 8px;
+    border-radius: 3px;
 }
 
 .student-insight-container .upper-insight {
@@ -679,6 +705,7 @@ button {
     flex-direction: row;
     gap: 20px;
     align-items: center;
+    justify-content: center;
 }
 
 .student-insight-container .upper-insight .left-logo-insight span  {
