--- a/assets/css/office-admin-style.css
+++ b/assets/css/office-admin-style.css
@@ -236,20 +236,20 @@ a.active {
 
 .main-requirements-container {
     width: 100%;
-    max-width: 900px;
+    max-width: 1200px;
     display: flex;
     flex-direction: column;
 }
 
 .main-requirements-container .first-main-content-container {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 3fr;
     gap: 10px;
 }
 
 .form {
     width: 100%;
-    height: fit-content;
+    max-height: 370px;
     padding: 15px 30px 30px 30px;
     background-color: var(--color-white);
     transition:all 200ms ease;
@@ -258,10 +258,106 @@ a.active {
     flex-direction: column;
 }
 
+.form table {
+    text-align: center;
+}
+
+.form table tbody{
+    display:block;
+    overflow:auto;
+    height:250px;
+    width:100%;
+}
+
+.form table thead, .form table tbody tr{
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+}
+
+.form table thead {
+    width: calc( 100% - 1em )
+}
+
 span.title {
     display: flex;
     border-bottom: 1px solid var(--color-dark-variant);
     padding: 10px 0px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+span.title button.open-csv {
+    background: rgb(17, 134, 17);
+    color: white !important;
+    padding: 8px 15px;
+    border-radius: 3px;
+    transition: all 200ms ease;
+}
+
+span.title button.open-csv:hover {
+    background: rgb(150, 228, 150);
+}
+
+span.title .upload-csv-container {
+    position: absolute;
+    right: 0;
+    top: 50px;
+    background: var(--color-white);
+    box-shadow: var(--box-shadow);
+    padding: 20px;
+    z-index: 200;
+    display: none;
+}
+
+span.title .upload-csv-container.active {
+    display: block;
+}
+
+span.title .upload-csv-container 
+.form-input-file-csv-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+span.title .upload-csv-container 
+.form-input-file-csv-container
+select {
+    cursor: pointer;
+    font-size: 16px;
+}
+
+
+span.title .upload-csv-container 
+.form-input-file-csv-container
+button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+    background: var(--color-primary-variant);
+    justify-content: center;
+    gap: 5px;
+    padding: 8px;
+    font-size: 16px;
+    transition: all 200ms ease;
+    margin-top: 20px;
+}
+
+span.title .upload-csv-container 
+.form-input-file-csv-container
+button:hover {
+    background: rgb(17, 134, 17);
+}
+
+span.title .upload-csv-container 
+.form-input-file-csv-container
+button span {
+    font-weight: 500;
+    font-size: 20px;
 }
 
 .form:hover {
@@ -270,8 +366,9 @@ span.title {
 
 
 .input-field-container {
-    display: flex;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 3fr 2fr 2fr;
+    gap: 20px;
 }
 
 
@@ -291,10 +388,8 @@ span.title {
 }
 
 .input-field input{
-    position: absolute;
     height: 100%;
     width: 100%;
-    padding: 0 35px;
     border: none;
     outline: none;
     font-size: 16px;
@@ -319,6 +414,10 @@ span.title {
     background: none;
     color: var(--color-dark);
     
+}
+
+.input-field select:is(:focus, :valid) {
+    border-bottom-color: #4070f4;
 }
 
 .input-field select option {
