--- a/assets/css/student-user-style.css
+++ b/assets/css/student-user-style.css
@@ -180,7 +180,12 @@ b {
     
 }
 
-
+.view-link {
+    background: rgb(17, 134, 17);
+    color: white !important;
+    padding: 3px 8px;
+    border-radius: 3px;
+}
 
 /* ====================================== NAVBAR TOP =========================== */
 
@@ -202,6 +207,12 @@ b {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 10px;
+}
+
+#navtop-menu {
+    display: none;
+    cursor: pointer;
 }
 
 .office-container .office-top-container .nav-logo-container .logo-img {
@@ -773,7 +784,6 @@ input[type='file']{
     display: flex;
     flex-direction: column;
     box-shadow: var(--box-shadow);
-    
     background: var(--color-white);
     border: 1px solid var(--color-light) ;
 }
@@ -879,6 +889,151 @@ input[type='file']{
     .office-container .office-top-container 
     .nav-logo-container .logo-img h2 {
         display: none;
+    }
+
+    .office-container .office-top-container {
+        padding: 10px 10px 10px 10px;
+    }
+
+    .office-top-container .nav-right-container
+    .nav-middle-container {
+        display: none;
+        flex-direction: column;
+        gap: 5px;
+        align-items: stretch;
+        background: var(--color-background);
+        position: fixed;
+        top: 60px;
+        left: -100%;
+        bottom: 0;
+        z-index: 250;
+        animation: showMenu 400ms ease forwards;
+    }
+
+    @keyframes showMenu {
+        to{
+            left: 0;
+        }
+    }
+
+    .office-top-container .nav-right-container
+    .nav-middle-container.active {
+        display: flex;
+    }
+
+    a.active {
+        background: rgb(0, 217, 255);
+        border: none;
+        padding-bottom: 10px !important;
+    }
+
+    .student-landing-page-home-container 
+    .left-title-container h1 {
+        font-size: 48px;
+        line-height: normal;
+    }
+
+    .student-landing-page-home-container {
+        padding: 0px 10px;
+    }
+
+    .student-landing-page-home-container 
+    .right-title-container {
+        display: none;
+    }
+
+    .student-landing-page-home-container 
+    .left-title-container {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        align-items: center;
+        text-align: center;
+    }
+
+    .student-landing-page-home-container .left-title-container h3 {
+        font-size: 12px;
+    }
+
+    .student-landing-page-home-container .left-title-container a {
+        padding: 15px 30px;
+        width: fit-content;
+        margin-top: 20px;
+        border-radius: 100px;
+        color: black;
+        background: var(--color-success);
+        border: none;
+    }
+
+    .clearance-info-table-container table thead tr th:nth-child(2),
+    .clearance-info-table-container table thead tr th:nth-child(3),
+    .clearance-info-table-container table tbody tr td:nth-child(2),
+    .clearance-info-table-container table tbody tr td:nth-child(3) {
+        display: none;
+    }
+
+    .clearance-info-table-container table {
+        text-align: center;
+        border-collapse: collapse;
+    }
+
+    .clearance-header-bar-container > h3 {
+        width: 100%;
+        padding: 8px 10px;
+        font-size: 1.5rem;
+        background-color: rgba(0, 0, 0, 0);
+        text-align: center;
+    }
+
+    .clearance-info-table-container table tr th {
+        min-width: 20px;
+        padding: 0px 0px;
+        border-bottom: 1px solid var(--color-dark-variant) ;
+        color: var(--color-info-dark);
+    }
+    
+    .clearance-info-table-container table tr td {
+        min-width: 20px;
+        padding: 15px 0px;
+        border-bottom: 1px solid var(--color-dark-variant);
+        font-weight: 600;
+    }
+
+    .clearance-section-container {
+        width: 100%;
+    }
+
+    .clearance-section-container .clearance-header-bar-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        padding-bottom: 5px;
+    }
+
+    .clearance-section-container {
+        display: flex;
+        flex-direction: column;
+        box-shadow: var(--box-shadow);
+        background: rgba(0, 0, 0, 0);
+        border: 1px solid var(--color-light);
+        padding: 0px 10px;
+    }
+
+    
+    .clearance-section-container 
+    .clearance-header-bar-container 
+    .clearance-info-table-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 10px 10px;
+        background: var(--color-white);
+    }
+
+    #navtop-menu {
+        display: block;
+        cursor: pointer;
     }
 }
 
